create basic ws implementation

--- a/group_2_finalproject/index.html
+++ b/group_2_finalproject/index.html
@@ -5,5 +5,9 @@
   </head>
   <body>
     <button type="button">Start a new game</button>
+    <script>
+      var socket = new WebSocket('https://galaga-team.herokuapp.com/echo');
+      socket.send('test message')
+    </script>
   </body>
 </html>
